{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 96,
  "lineage": "8b694e66-c18e-ce55-df40-e33985dc77ec",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.186.225",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-09-22T09:38:12.377-07:00",
            "id": "projects/homestead-mortgages/global/addresses/homestead-mortgages-staging-edge",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "homestead-mortgages-staging-edge",
            "prefix_length": 0,
            "project": "homestead-mortgages",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/addresses/homestead-mortgages-staging-edge"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "edge_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/homestead-mortgages/global/forwardingRules/homestead-mortgages-staging-edge-http",
            "ip_address": "34.107.186.225",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "homestead-mortgages-staging-edge-http",
            "port_range": "80-80",
            "project": "homestead-mortgages",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/forwardingRules/homestead-mortgages-staging-edge-http",
            "target": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/targetHttpProxies/homestead-mortgages-staging-edge"
          },
          "dependencies": [
            "google_compute_global_address.edge",
            "google_compute_target_http_proxy.edge",
            "google_compute_url_map.edge_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "edge_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/homestead-mortgages/global/forwardingRules/homestead-mortgages-staging-edge-https",
            "ip_address": "34.107.186.225",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "homestead-mortgages-staging-edge-https",
            "port_range": "443-443",
            "project": "homestead-mortgages",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/forwardingRules/homestead-mortgages-staging-edge-https",
            "target": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/targetHttpsProxies/homestead-mortgages-staging-edge"
          },
          "dependencies": [
            "google_compute_global_address.edge",
            "google_compute_managed_ssl_certificate.edge",
            "google_compute_target_https_proxy.edge",
            "google_compute_url_map.edge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-09-22T09:38:24.855-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/homestead-mortgages/global/targetHttpProxies/homestead-mortgages-staging-edge",
            "name": "homestead-mortgages-staging-edge",
            "project": "homestead-mortgages",
            "proxy_bind": false,
            "proxy_id": 8103544370682073583,
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/targetHttpProxies/homestead-mortgages-staging-edge",
            "url_map": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge-http"
          },
          "dependencies": [
            "google_compute_url_map.edge_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-09-22T14:49:59.483-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/homestead-mortgages/global/targetHttpsProxies/homestead-mortgages-staging-edge",
            "name": "homestead-mortgages-staging-edge",
            "project": "homestead-mortgages",
            "proxy_bind": false,
            "proxy_id": 3170265353047459560,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/targetHttpsProxies/homestead-mortgages-staging-edge",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/sslCertificates/homestead-mortgages-staging-servicing-supermortgage-com",
              "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/sslCertificates/homestead-mortgages-staging-staging-servicing-supermortgage-com",
              "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/sslCertificates/homestead-mortgages-staging-staging-supermortgage-com",
              "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/sslCertificates/homestead-mortgages-staging-supermortgage-com",
              "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/sslCertificates/homestead-mortgages-staging-www-supermortgage-com"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-09-22T09:40:52.746-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-api",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zs5UQfVKAy0=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "servicing.supermortgage.com",
                  "staging.servicing.supermortgage.com"
                ],
                "path_matcher": "servicing"
              },
              {
                "description": "",
                "hosts": [
                  "staging.supermortgage.com",
                  "supermortgage.com",
                  "www.supermortgage.com"
                ],
                "path_matcher": "consumer"
              }
            ],
            "id": "projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge",
            "map_id": 5479257483822174588,
            "name": "homestead-mortgages-staging-edge",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-api",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "consumer",
                "path_rule": [],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-console",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "servicing",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "homestead-mortgages",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "edge_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-09-22T09:38:12.374-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "B1GKU7yHgu4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge-http",
            "map_id": 3522456777308180507,
            "name": "homestead-mortgages-staging-edge-http",
            "path_matcher": [],
            "project": "homestead-mortgages",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/urlMaps/homestead-mortgages-staging-edge-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.stack[\"staging\"]",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/regions/us-central1/networkEndpointGroups/homestead-mortgages-staging-api",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-09-22T09:38:26.606-07:00",
            "enable_cdn": false,
            "fingerprint": "Z_Gxw2jHsys=",
            "generated_id": 6757207852942561773,
            "id": "projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-api",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "homestead-mortgages-staging-api",
            "port_name": "http",
            "project": "homestead-mortgages",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-api",
            "session_affinity": "NONE",
            "timeout_sec": 30
          }
        }
      ]
    },
    {
      "module": "module.stack[\"staging\"]",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "console",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/regions/us-central1/networkEndpointGroups/homestead-mortgages-staging-api",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-09-22T14:38:11.196-07:00",
            "enable_cdn": false,
            "fingerprint": "m__aZnurHFA=",
            "generated_id": 3052606712543398828,
            "iap": [
              {
              }
            ],
            "id": "projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-console",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "homestead-mortgages-staging-console",
            "port_name": "http",
            "project": "homestead-mortgages",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/homestead-mortgages/global/backendServices/homestead-mortgages-staging-console",
            "session_affinity": "NONE",
            "timeout_sec": 30
          }
        }
      ]
    }
  ]
}